# dxforge

./: .env  .gitignore  README.md  config.yaml  docker-compose.yml  environment.yaml  main.py  pyproject.toml  requirements.txt  service.json
.github/workflows/: docs.yml
config/: selinux_allow_dxforge.sh  selinux_undo_dxforge.sh
controllers/feeds/: config.yaml
controllers/strategies/: config.yaml
docs/: conf.py  example.md  index.rst
dxforge/: __init__.py  __main__.py  app.py  forge.py  main.py  orchestrator.py
dxforge/app/: __main__.py  app.py  main.py  routes.py
dxforge/cli/: cli.py  schedule.py
dxforge/cluster/: orchestrator.py  registry.py
dxforge/clusters/: controller.py  orchestrator.py
dxforge/feeds/: feed_service.py
dxforge/interface/: .gitignore  cli.py
dxforge/manager/: __init__.py  checker.py  manager.py  minio.py  strat.py
dxforge/mesh/: __init__.py  mesh_controller.py
dxforge/orchestrator/: __init__.py  __main__.py  logs.py  orchestrator.py  remove.py  run.py  stop.py
dxforge/registry/: mesh_registry.py  registry.py
dxforge/routers/: cluster.py  cluster_router.py  root_router.py
dxforge/service/: __init__.py  __main__.py  schedule.py
dxforge/strategies/: strategy_service.py
dxforge/ui/: __init__.py  orchestrator_ui.py  web_ui.py
examples/: dash.py  lob.csv  main.py  test.py  test2.py
examples/stat_arb/: config.yaml  stat_arb.py
examples/strategy1/: Dockerfile.template
interface/: index.html
template/: Dockerfile
tests/: Dockerfile  poc.py  poc_k8s.py  poc_swarm.py  test_node.py  test_orchestrator.py
(+57 files in other folders)
