[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dxforge"
version = "0.1.0"
description = "An orchestration suite for quantitative trading strategies."
requires-python = ">=3.10"
dependencies = []
authors = [{ name = "Rafael Zimmer", email = "rzimmerdev@gmail.com" }]
license = "MIT"
readme = "README.md"

[project.scripts]
mycli = "__main__:main"

[tool.setuptools]
package-dir = { "" = "dxforge" }

[tool.setuptools.packages.find]
where = ["cli"]